fix [responsive] : add flex wrap to few components

--- a/src/styles/components/_giftcard.scss
+++ b/src/styles/components/_giftcard.scss
@@ -2,13 +2,14 @@
 
 .giftcards {
   width: 100%;
-  height: 325px;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
   gap: 50px;
   overflow: hidden;
+  flex-wrap: wrap;
   &__card {
     width: 235px;
     height: 100%;
@@ -54,8 +55,8 @@
   }
   &:hover {
     cursor: pointer;
-    .desc__type{
-        opacity: .9;
+    .desc__type {
+      opacity: 0.9;
     }
   }
 }
