--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -181,4 +181,9 @@
       }
     }
   }
+  .login{
+    .login__faq{
+      display: none;
+    }
+  }
 }
