--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     gap: 5%;
-    column-gap: 30px;
+    column-gap: 40px;
     align-items: center;
     flex-wrap: wrap;
     // overflow: hidden;
